3.6.0-beta6 - ??? 

* 10683: Fix bug in DiceButton 'Keep Dice' option
* 10681: Better documented pieceName vs PieceName
* 10679: Place Marker, Send-to-Location, and Translate traits didn't always
    repaint maps
* 10678: Undo of movement will no longer deny lone stackable pieces their own
    stack
* 10676: Upgrade to Java 17.0.1+12 for Windows, Mac packages
* 10673: Added Game Refresher documentation
* 10672: Multiplayer Server controls have improved feedback / UX
* 10671: Calculate Hex Range correctly, regardless of hex shape
* 10667: Private Message windows no longer prompt to ignore every time you
    close them; incoming private messages do not grab focus
* 10663: Fix occasional draw-side exceptions during loading game and saving
    screenshots
* 10660: Report translated name for Symbolic Die Faces
* 10659: Sanitize temporary file names a bit earlier
* 10658: Fix NPE if try to open translations but the buildable doesn't exist
* 10654: Fixed corner-case NPE when closing a game
* 10652: Zone Editor shows coordinates of vertices while editing
* 10650: Show X,Y in Configurer when repositioning At Start Stack
* 10649: Deck can start face-up or face-down when using right-click menu
    setting
* 10648: Private chat windows will no longer steal focus
* 10647: Private Maps visible to non-owning players will correctly display
    Mouseover text
* 10643: Show saved game mismatch warnings (e.g., loading wrong version) when
    loading from Wizard
* 10641: When Editor changes a prototype, clear the prototype cache and all
    PieceSlot caches
* 10640: Tidier right arrow symbol in default move reports
* 10639: Fix exception when canceling edit of a component that has been
    elsewhere moved or deleted
* 10638: Fixed NPE if pasting a cut component that was then deleted before
    pasting
* 10636: Warn when Global Property has a blank name (which causes NPE on game
    load)
* 10635: Trigger Action traits with "loop until" and "loop while" conditions